# ai_model_evaluation_mlops

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  compose.yaml  pyproject.toml
config/: walmart_sales.yaml
dags/: dag_generator.py
notebooks/: 01_eda.ipynb  01_walmart_sales.ipynb  02_autogluon.ipynb  02_retail_store_inventory.ipynb  03_sp500.ipynb
src/pipe/: prep_data_generic.py  train_autogluon_timeseries.py
tests/: test_pipeline.py
