[project]
name = "ai-model-evaluation-mlops"
version = "0.1.0"
description = "AI Model Evaluation and MLOps Pipeline"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "autogluon>=1.5.0",
    "plotly>=6.7.0",
]

[dependency-groups]
dev = ["jupyter>=1.1.1", "pytest>=9.0.3", "ruff>=0.15.13"]
